# scade-wux

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci_cd.yml  label.yml
debug/: debug.py
doc/: Makefile
doc/changelog.d/: 10.documentation.md  11.documentation.md  12.documentation.md  13.maintenance.md  14.documentation.md  15.documentation.md  16.documentation.md  18.test.md  19.fixed.md  20.fixed.md  22.added.md  23.maintenance.md  25.fixed.md  28.fixed.md  29.documentation.md  31.fixed.md  34.fixed.md  34.miscellaneous.md  35.miscellaneous.md  37.miscellaneous.md  40.miscellaneous.md  43.added.md  44.miscellaneous.md  46.miscellaneous.md  47.miscellaneous.md  51.miscellaneous.md  52.miscellaneous.md  53.dependencies.md  53.miscellaneous.md  55.fixed.md  58.maintenance.md  59.maintenance.md  6.documentation.md  7.maintenance.md  8.fixed.md  9.documentation.md
doc/source/: changelog.rst  conf.py  contributing.rst  index.rst
doc/source/_templates/: includes.dox
doc/source/getting-started/: index.rst
doc/source/getting_started/: index.rst
doc/source/runtime/: index.rst
doc/source/usage/: extension.rst  hooks.rst  index.rst  library.rst  services.rst  wrapper.rst
src/ansys/scade/wux/: __init__.py  a661.py  debug.py  display.py  dllext.py  gowrapper.py  gowrapper24r2.py  hooks.py  module.py  module24r2.py  proxy.py  register.py  sdyext.py  simuext.py  unregister.py  wux.py  wux.srg  wux24r2.srg  wuxmodule.py
tests/: conftest.py  sctoc_stub.py  test_generate.py  test_integration.py  test_kcgcontext.py  test_wux.py
tests/Debug/: debug.py
tests/Hooks/: .gitignore  Hooks.cpp  Hooks.etp  Hooks.vsw  P.xscade  readme.md
tests/Two/: .gitignore  Two.vsw  readme.md  start_a661_server.bat
tests/Two/DF/: DF_Generation_server_conf.xml  Two.sgfx  TwoDF.etp
tests/Two/UA/: Two.etp  Two.sdy  Two.xscade  Voter.xscade  Wait.xscade  WidgetValue.xscade
tests/Two/UA/UT KCG/: mapping.xml
tests/Two/UA/UT Nominal/: mapping.xml
tests/Types/: .gitignore  readme.md
tests/Types/Graphics/: Interface.sgfx  NotSelected.sgfx  Types.etp  definitions.dgfx  font_table.sft  gradient_table.sgt  line_width_table.swt  texture_table.stt
tests/Types/Logic/: Model.etp  Model.sdy  Model.xscade  P.xscade  guarantee.c  guarantee.h
tests/UT/KcgContext/: .gitignore  KcgContext.etp  KcgContext.vsw  P.xscade
tests/UTExtension/: .gitignore  readme.md
tests/UTExtension/Extension/: extension.py  pyproject.toml  wux_ut_ext.srg
tests/UTExtension/Extension/include/: WuxUTExt.h
tests/UTExtension/Extension/lib/: WuxUTExt.cpp
tests/UTExtension/Extension/wux_ut_ext/: __init__.py  extension.py  wux_ut_ext 25r2.srg  wux_ut_ext.srg
tests/UTExtension/Model/: Model.etp  P.xscade
tests/Variables/: .gitignore  Engine.xscade  Pkg.xscade  Variables.etp  Variables.sdy  Variables.vsw  readme.md
tests/Variables/Displays/: Displays.etp  Speed.sgfx  Throttles.sgfx  color_table.sct  gradient_table.sgt  specification.sgfx  texture_table.stt
tests/Variables/UT KCG/: mapping.xml
tests/Variables/UT Nominal/: mapping.xml
tests/Variables/UT Simulation/: Variables_interface.c  mapping.xml
tests/ref/: generate_wuxsdyModel_UT_KCG.c  wux_ut_ext_stdout.txt
version/: index.html
version/2.0/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/2.0/_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt
version/2.0/api/: index.html
version/2.0/getting_started/: index.html
version/2.0/runtime/: a661ext.html  ctxext.html  dllext.html  index.html  sdyext.html  sdyproxy.html  simuext.html
version/2.0/usage/: index.html  library.html  services.html  wrapper.html
version/2.1/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/2.1/_static/: search.json
version/2.1/api/: index.html
version/2.1/getting-started/: index.html
version/2.1/runtime/: a661ext.html  ctxext.html  dllext.html  index.html  sdyext.html  sdyproxy.html  simuext.html
version/2.1/usage/: index.html  library.html  services.html  wrapper.html
version/2.2/: contributing.html  genindex.html  index.html  py-modindex.html  searchindex.js
version/2.2/_static/: search.json
version/2.2/api/: index.html
version/2.2/getting-started/: announcement.html  index.html
version/2.2/runtime/: ctxext.html  sdyext.html  simuext.html
version/2.2/usage/: index.html  library.html  services.html  wrapper.html
version/2.3/: changelog.html  contributing.html  index.html  objects.inv  py-modindex.html  searchindex.js
version/2.3/_sources/: index.rst.txt
version/2.3/_static/: search.json
version/2.3/runtime/: dllext.html  sdyproxy.html  simuext.html
version/2.3/usage/: extension.html  services.html
version/dev/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: changelog.rst.txt
version/dev/_static/: documentation_options.js  search.json
version/dev/api/: index.html
version/dev/getting-started/: index.html
version/dev/runtime/: a661ext.html  ctxext.html  dllext.html  index.html  sdyext.html  sdyproxy.html  simuext.html
version/dev/usage/: extension.html  index.html  library.html  services.html  wrapper.html
version/stable/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
version/stable/_sources/: changelog.rst.txt  contributing.rst.txt
version/stable/_static/: documentation_options.js  search.json
version/stable/api/: index.html
version/stable/getting-started/: index.html
version/stable/runtime/: a661ext.html  ctxext.html  dllext.html  index.html  sdyext.html  sdyproxy.html  simuext.html
version/stable/usage/: extension.html  index.html  library.html  services.html  wrapper.html
(+268 files in other folders)
