[build-system]
requires = [
    "flit_core >=3.9,<3.12; python_version < '3.8'",
    "flit_core >=3.12,<4; python_version >= '3.8'",
]
build-backend = "flit_core.buildapi"

[project]
name="ansys-scade-wux"
version="2.1.dev0"
description ="Generic code integration target for SCADE."
readme="README.rst"

# only 3.7, 3.10, or >= 3.12
requires-python = ">=3.7,!=3.8.*,!=3.9.*,!=3.11.*"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
dependencies=[
    "importlib-metadata >= 1.0; python_version < '3.8'",
    "importlib-metadata >= 4.0; python_version >= '3.8'",
    "ansys-scade-apitools>=0.5.0",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Embedded Systems",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
keywords=["Scade", "Wrapper", "Integration"]

[project.optional-dependencies]
build = [
    "build==1.4.1",
    "twine==6.2.0"
]
tests = [
    "pytest >= 9.0.1; python_version >= '3.8'",
    "pytest <= 7.4.4; python_version < '3.8'",
    "pytest-cov >= 6.0.0; python_version >= '3.8'",
    "pytest-cov <= 4.1.0; python_version < '3.8'",
]
doc = [
    "ansys-sphinx-theme[autoapi]==1.7.0; python_version >= '3.12'",
    "ansys-sphinx-theme[autoapi]==1.5.3; python_version <= '3.10'",
    "autodoc_pydantic==2.2.0",
    "numpydoc==1.10.0; python_version >= '3.12'",
    "numpydoc==1.8.0; python_version <= '3.10'",
    "sphinx==9.1.0; python_version >= '3.12'",
    "sphinx==8.1.3; python_version <= '3.10'",
    "sphinx-autodoc-typehints==3.6.2; python_version >= '3.12'",
    "sphinx-autodoc-typehints==2.3.0; python_version <= '3.10'",
    "sphinxcontrib-globalsubs==1.1.0; python_version >= '3.12'",
    "sphinxcontrib-globalsubs==0.1.2; python_version <= '3.10'",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinx-copybutton==0.5.2",
    "sphinxnotes-strike==2.0; python_version >= '3.12'",
    "sphinxnotes-strike==1.2.1; python_version <= '3.10'",
    "breathe>=4.33.1",
]


[project.urls]
Source = "https://github.com/ansys/scade-wux"
Issues = "https://github.com/ansys/scade-wux/issues"
Discussions = "https://github.com/ansys/scade-wux/discussions"
Documentation = "https://wux.scade.docs.pyansys.com"
Releases = "https://github.com/ansys/scade-wux/releases"
Homepage = "https://www.ansys.com/products/embedded-software/ansys-scade-suite"

[project.entry-points."ansys.scade.registry"]
srg = "ansys.scade.wux:srg"
register = "ansys.scade.wux.register:register"
unregister = "ansys.scade.wux.unregister:unregister"


[project.scripts]
# backward compatibility
register_ansys_scade_wux = "ansys.scade.wux.register:main"
unregister_ansys_scade_wux = "ansys.scade.wux.unregister:main"


[tool.flit.module]
name = "ansys.scade.wux"


[tool.ruff]
line-length = 100

# TODO: "preserve" leads to an error, although it is documented
# and used in other repositories
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys", "conftest", "test_utils"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D",]


[tool.coverage.run]
source = ["ansys.scade.wux"]
patch = ["subprocess"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "@(abc\\.)?abstractmethod",
]


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-ra --cov=ansys.scade.wux --cov-report html:.cov/html --cov-branch --cov-report xml:.cov/xml --cov-report term -vv"


[tool.towncrier]
package = "ansys.scade.wux"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/scade-wux/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/scade-wux/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[tool.codespell]
ignore-words-list = ["synopsys"]

[tool.numpydoc_validation]
checks = [
    'GL06',  # Found unknown section
    'GL07',  # Sections are in the wrong order.
    'GL08',  # The object does not have a docstring
    'GL09',  # Deprecation warning should precede extended summary
    'GL10',  # reST directives {directives} must be followed by two colons
    'SS01',  # No summary found
    'SS02',  # Summary does not start with a capital letter
    'SS03',  # Summary does not end with a period
    'SS04',  # Summary contains heading whitespaces
    # "SS05", # Summary must start with infinitive verb, not third person
    'RT02',  # The first line of the Returns section should contain only the
    # type, unless multiple values are being returned"
]
exclude = [
    '\._',  # ignore private definitions
    'conftest.',
    'test.',
]

