[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="wux-ut-ext"
version="2.1.dev0"
description ="SCADE Code Generator extension for unit testing Ansys SCADE Wrapper Tools."

# only 3.7, 3.10, or >= 3.12
requires-python = ">=3.7,!=3.8.*,!=3.9.*,!=3.11.*"

[tool.flit.module]
name = "wux_ut_ext"

[project.entry-points."ansys.scade.registry"]
srg = "wux_ut_ext:srg"
